--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
     "type": "module",
     "description": "React TypeScript, using Vite bundler",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-      "@types/react": "^18.0.15",
-      "@types/react-dom": "^18.0.6",
-      "@vitejs/plugin-react": "^2.0.0",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "typescript": "^4.7.4",
-      "vite": "^3.0.4"
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
+        "@vitejs/plugin-react": "^2.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "typescript": "^4.7.4",
+        "vite": "^3.0.4"
+    },
+    "dependencies": {
+        "react-select": "^5.8.0"
     }
-  }
-  
+}
