--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
         "vite": "^3.0.4"
     },
     "dependencies": {
-        "react-select": "^5.8.0",
-        "ts-migrate": "^0.1.35"
+        "react-select": "^5.8.0"
     }
 }
